<resources>
    <string name="app_name">Another Googel Fit</string>

    <string name="action_settings">Settings</string>
    <string name="history">History</string>
    <string name="recording">Recording</string>
    <string name="session">Session</string>
    <string name="sensor">Sensor</string>
    <string name="ble">BLE</string>
    <string name="setting">Settings</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
