<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/history"
              android:checked="false"
              android:title="@string/history" />
        <item android:id="@+id/recording"
              android:checked="false"
              android:title="@string/recording" />
        <item android:id="@+id/session"
              android:checked="false"
              android:title="@string/session" />
        <item android:id="@+id/sensor"
              android:checked="false"
              android:title="@string/sensor" />
        <item android:id="@+id/ble"
              android:checked="false"
              android:title="@string/ble" />
        <item android:id="@+id/config"
              android:checked="false"
              android:title="@string/setting" />
    </group>
</menu>